--- a/app/views/suppliers/new.html.erb
+++ b/app/views/suppliers/new.html.erb
@@ -13,7 +13,6 @@
 
 <div id="sc1" class="tabcontent">
 <% simple_form_for @supplier do |f| %>
-              <% f.inputs do %>
                 <%= f.input :company_name, :label =>(t "supplier.company_name"), :input_html => {:size => 50} %>
                 <%= f.input :website, :label =>(t "supplier.website"), :input_html => {:size => 50} %>
                 <%= f.input :contact_name, :label => (t "supplier.contact_name"), :input_html => {:size => 50} %>
@@ -28,19 +27,18 @@
                 <%= f.input :notes, :label => (t "global.notes"), :input_html => {:rows => 10} %>
                 <%= f.input :created_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
                 <%= f.input :created_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
-            <% end %>
-        <%= f.buttons %>
+
+        <%= f.button :submit %>
   <% end %>
     </div><div id="sc2" class="tabcontent">
 <% simple_form_for @supplier do |f| %>
-              <% f.inputs do %>
                 <%= f.input :credit_terms, :label => (t "supplier.credit_terms"), :input_html => {:size => 30} %>
                 <%= f.input :credit_amount, :label => (t "supplier.credit_amount"), :input_html => {:size => 30} %>
                 <%= f.input :parts_leadtime_days, :label => (t "supplier.leadtime"), :input_html => {:size => 5} %>
                 <%= f.input :created_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
                 <%= f.input :created_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
-            <% end %>
-        <%= f.buttons %>
+
+        <%= f.button :submit %>
   <% end %>
     </div>
     </div>
