--- a/app/views/work_orders/_closed_wo_tab.html.erb
+++ b/app/views/work_orders/_closed_wo_tab.html.erb
@@ -3,24 +3,19 @@
     <th><%= "WO #" %></th>
     <th><%= "Client" %></th>
     <th><%= "Subject" %></th>
-    <th><%= "Description" %></th>
-    <th><%= "Created at" %></th>
-    <th><%= "Created by" %></th>
-    <th><%= "Closed by" %></th>
-    <th><%= "Closed when?" %></th>
+    <th><%= "Created" %></th>
+    <th><%= "Closed" %></th>
   </tr>
 
 
 <% @closed_work_orders.each do |closed_wo| %>
-  <tr align="left" class="priority_main_<%= closed_wo.priority_list.id %>">
-    <td><%= link_to(closed_wo.id, closed_wo) %></td>
-    <td><%= link_to(closed_wo.user.name, user_path(closed_wo.user_id)) %></td>
-    <td><%=h closed_wo.subject %></td>
-    <td><%=h closed_wo.description %></td>
-    <td><%=h l closed_wo.created_at, :format => :medium %></td>
-    <td><%=h closed_wo.created_by %></td>
-    <td><%=h closed_wo.closed_by %></td>
-    <td><%= time_ago_in_words(closed_wo.closed_date) %> <%= t "global.ago" %> </td>
+  <tr  class="priority_main_<%= closed_wo.priority_list.id %>">
+    <td align="center"><%= link_to(closed_wo.id, closed_wo) %></td>
+    <td align="center"><%= link_to(closed_wo.user.name, user_path(closed_wo.user_id)) %></td>
+    <td align="left"><%= truncate(closed_wo.subject, :length => 75) %></td>
+    <td align="left"><%= l closed_wo.created_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= closed_wo.created_by %></td>
+    <td align="left"><%= time_ago_in_words(closed_wo.closed_date) %>&nbsp;<%= t "global.by" %>&nbsp;<%= closed_wo.closed_by %>&nbsp;<%= t "global.ago" %></td>
+
   </tr>
 <% end %>
 </table>
