--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -10,7 +10,7 @@
 <div id="ddtabs1" class="basictab">
   <ul>
     <li><a href="#new" rel="tab1"><%= t "workorder.tab_menu_new" %>&nbsp;(
-      <% if @new_work_orders.count > 0 %><font color="red"><%= @new_work_orders.count %></font>
+      <% if @new_work_orders.count > 0 %><span style="color:red;"><%= @new_work_orders.count %></span>
           <% else %><%= @new_work_orders.count %>
       <% end %>)</a></li>
     <li><a href="#assigned" rel="tab2"><%= t "workorder.tab_menu_assigned" %>&nbsp;(<%= @assigned_work_orders.count %>
