--- a/app/views/users/edit_profile.html.erb
+++ b/app/views/users/edit_profile.html.erb
@@ -4,6 +4,9 @@
   <ul>
     <li><a href="#<%= t "products.tab_menu_basic_name" %>" rel="tab1"><%= (t "products.tab_menu_basic") %></a></li>
     <li><a href="#<%= t "users.tab.contact_info" %>" rel="tab2"><%= t "users.tab.contact_info" %></a></li>
+    <% if can? :manage, :all %>
+        <li><a href="#<%= t "users.tab.permissions" %>" rel="tab3"><%= t "users.tab.permissions" %></a></li>
+    <% end %>
   </ul>
 </div>
 
@@ -11,7 +14,7 @@
 
   <div id="tab1" class="tabcontent">
 
-      <% simple_form_for(@user) do |f| %>
+      <%= simple_form_for(@user) do |f| %>
               <%= f.input :active , :label => (t "global.active") %>
               <%= f.input :username ,:input_html => {:autocomplete => 'off'}, :label => (t "user.username") %>
               <%= f.input :name , :label =>(t "user.name_eg") %>
@@ -36,7 +39,7 @@
     
   </div>
   <div id="tab2" class="tabcontent">
-     <% simple_form_for(@user) do |f| %>
+     <%= simple_form_for(@user) do |f| %>
               <%= f.input :address, :input_html => {:rows => 5}, :label => (t "global.address") %>
               <%= f.input :city, :input_html => {:size => 30}, :label => (t "global.city") %>
               <%= f.input :state, :input_html => {:size => 30}, :label => (t "global.state") %>
@@ -45,13 +48,7 @@
               <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
               <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
               <%= f.input :notes, :input_html => {:rows => 15}, :label => (t "global.notes") %>
-              <% if can? :destroy, @user %>
-                  <%= f.input :role, :as => :select, :collection => User::ROLES, :label => (t "global.role") %>
-              <% end %>
-
               <%= f.submit %>
-
-
               <p>
                 <% if current_user == nil %>
                     <%= hidden_field_tag "user[created_by]", @user.username %>
@@ -65,4 +62,20 @@
       <% end %>
 
   </div>
+  <% if can? :manage, :all %>
+  <div id="tab3" class="tabcontent">
+      <%= simple_form_for(@user) do |f| %>
+        <div class="input">
+                <label class="string optional" for="user_role">Role</label>
+                <%= f.collection_select :role, User::ROLES, :to_s, :humanize %>
+              </div>
+          <%= f.input :employee, :as => :radio, :hint => (t "user.hint.employed" ),  :label => (t "user.employed")   %>
+          <%= f.input :client, :as => :radio, :hint => (t "user.hint.client" ),:label => (t "user.client")  %>
+          <%= f.input :workorder_assignability, :as => :radio, :hint => (t "user.hint.assignable" ),:label => (t "user.assignable") %>
+          <%= hidden_field_tag "user[edited_at]", Time.now %>
+          <%= hidden_field_tag "user[edited_by]", current_user.username %>
+          <%= f.submit %>
+      <% end %>
+  </div>
+      <% end %>
 </div>
