--- a/public/stylesheets/ddtabmenu.css
+++ b/public/stylesheets/ddtabmenu.css
@@ -14,7 +14,7 @@ float: left;
 
 .basictab li a {
     text-decoration: none;
-    padding: 8px 10px;
+    padding: 6px;
     border-bottom: none;
     background-color: #4B7399;
     color: #ffffff;
