Minor work done to the CSS layout's in New User Files.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,12 +66,9 @@ $(function() {
 </div>
 <div id="footer" class="footer_link">
   <p>
-    Powered by <a href="http://myitcrm.com">MyIT CRM</a>&copy; 2010 - 2011
+    Powered by <a href="http://myitcrm.com">MyIT CRM</a>&copy; 2010 - 2011 - v2.0.0.0 ALPHA - Glen Vanderhel
   </p>
 
-  <p class="footer_version">
-    Release - ALPHA 2.0.0.0
-  </p>
 
 </div>
 </body>
