--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,50 +2,59 @@
   <%= link_to(image_tag("exit.png", :title=> (t "global.exit"), :align => "bottom", :hspace => "2"), users_path) %><%= link_to (t "global.exit"), users_path %>
 </div>
 <br>
-<div id="ddtabs1" class="basictab">
-  <ul>
-    <li><a href="#<%= t "products.tab_menu_basic_name" %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
-  </ul>
-</div>
-<div class="tabcontainer">
-  <div id="sc1" class="tabcontent">
-    <%= simple_form_for(@user) do |f| %>
+
+<div>
+  <%= simple_form_for(@user) do |f| %>
       <%= f.error_notification %>
-      <%= f.input :username, :label => (t "user.username") %>
-      <%= f.input :name, :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
-      <% if logged_in? %>
-      <%= f.input :client, :input_html => {:value => "1", :value => "1"}, :label =>(t "user.client") %>
-      <% end %>
+      <fieldset>
+        <legend><%= t "global.required" %></legend>
+      <div class="span-14">
+
+       <%= f.input :name, :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
+       <%= f.input :username, :label => (t "user.username") %>
       <%= f.input :password, :required => true %>
       <%= f.input :password_confirmation, :label => (t "user.password_confirmation"), :required => true %>
       <%= f.input :email, :label => (t "global.email") %>
-      <%= f.input :address, :input_html => {:rows => 5}, :label => (t "global.address") %>
+
+        </div>
+
+       <div class="span-14 last" >
+      <%= f.input :address, :input_html => {:rows => 4, :cols => 34}, :label => (t "global.address") %>
       <%= f.input :city, :input_html => {:size => 30}, :label => (t "global.city") %>
-      <%= f.input :state, :input_html => {:size => 30}, :label => (t "global.state") %>
       <%= f.input :zip, :input_html => {:size => 30}, :label =>(t "global.zip") %>
-      <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
+      <%= f.input :state, :input_html => {:size => 30}, :label => (t "global.state") %>
+
+
+       </div></fieldset>
+       <div class="span-20 last">
+          <fieldset>
+        <legend><%= t "global.contact_numbers" %></legend>
+        <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
       <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
       <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
-        <% if current_user == nil %>
-            <%= hidden_field_tag "user[created_by]", "SELF" %>
-            <%= hidden_field_tag "user[client]", 1 %>
-            <% else %>
-      <%= hidden_field_tag "user[created_by]", current_user.username %>
-            <% end %>
-        <% if can? :manage, :all %>
-   <div class="input">
-     <label class="string required" for="user_role"><abbr title="Required">*</abbr>Role</label>
-     <%= f.collection_select :role,  User::ROLES, :to_s, :humanize %>
-   </div>
-   <% end %>
-  <%= f.button :submit %>
- <% end %>
-    </div>
-        <div id="sc2" class="tabcontent">
-            <%= simple_form_for(@user) do |f| %>
+      <% if current_user == nil %>
+          <%= hidden_field_tag "user[created_by]", "SELF" %>
+          <%= hidden_field_tag "user[client]", 1 %>
+      <% else %>
+          <%= hidden_field_tag "user[created_by]", current_user.username %>
+      <% end %>
+              </fieldset>
+       </div>
+       <div class="span-14 last">
+          <fieldset>
+        <legend><%= t "global.special" %></legend>
+      <% if can? :manage, :all %>
+                <% if current_user.employee == true %>
+          <%= f.input :client, :as => :radio, :input_html => {:value => "1", :value => "1"}, :label =>(t "user.client") %>
+          <%= f.input :employee, :as => :radio, :input_html => {:value => "1", :value => "1"}, :label =>(t "user.employed") %>
+          <%= f.input :workorder_assignability, :as => :radio, :input_html => {:value => "1", :value => "1"}, :label =>(t "user.assignable") %>
+      <% end %>
+            <label class="string required" for="user_role"><abbr title="Required">*</abbr>Role</label>
+            <%= f.collection_select :role, User::ROLES, :to_s, :humanize, :include_blank => true %>
+          </fieldset>
+          </div>
+      <% end %>
+      <%= f.button :submit %>
+  <% end %>
+</div>
 
-             <%= f.button :submit %>
-
-            <% end %>
-        </div>
-  </div>
